Edited base.html and app.py to use home.html.

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Show Tracker</title>
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+
 </head>
 <body>
-    <h1>Test Webpage</h1>
+    <div class="header">
+        <h1 class="text-center"><a class="headerLink" href="/"> Flash Card Helper</a></h1>
+    </div>
+    {% block content %}
+        {# Template insert here #}
+    {% endblock %}
 </body>
 </html>
