--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,41 @@
             <h2>More content will be added here later.</h1>
         </div>
         <div class="col-md-3">
-            <h2>Login</h4>
+            <div>
+                <h2>Login</h2>
+                <form name="login_form">
+
+                    <label for="email">Email</label>
+                    <input type="text" name="email" class="field" required>
+    
+                    <label for="password">Password</label>
+                    <input type="text" name="password" class="field" required>
+                    
+                    <p class="error error--hidden"></p>
+    
+                    <input type="submit" value="Log In" class="btn">
+    
+                </form>
+            </div>
+            <div>
+                <h2>Create Account</h2>
+                <form name="signup_form">
+
+                    <label for="name">Name</label>
+                    <input type="text" name="name" class="field" required>
+    
+                    <label for="email">Email</label>
+                    <input type="text" name="email" class="field" required>
+    
+                    <label for="password">Password</label>
+                    <input type="text" name="password" class="field" required>
+                    
+                    <p class="error error--hidden"></p>
+    
+                    <input type="submit" value="Sign Up" class="btn">
+    
+                </form>
+            </div>
         </div>
     </div>
 {% endblock %}
