--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Show Tracker</title>
 
+    <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
@@ -12,10 +13,13 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="text-center"><a class="headerLink" href="/"> Flash Card Helper</a></h1>
+        <h1 class="text-center"><a class="headerLink test" href="/"> Flash Card Helper</a></h1>
     </div>
     {% block content %}
         {# Template insert here #}
     {% endblock %}
+
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="/static/js/scripts.js"></script>
 </body>
 </html>
