--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,12 +3,48 @@
 {% block content %}
 
     <h2 class="text-center">Logged in</h2>
-    <div class="center-text">
-        <a href="/user/signout" class="btn btn--secondary">Sign out</a>
+    <div class="text-center">
+        <a href="/user/signout" class="btn btn-primary">Sign out</a>
     </div>
+
+    <!-- Section to add a show. -->
+<div class="container">
+    <div class="jumbotron">
+        <div class="text-center">
+            <h2><a data-toggle="collapse" href="#AddCards">Add a Cards List</a></h2>
+            
+        </div>
+        <div id="AddCards" class="collapse">
+            <div class="container">
+            <form name="addCards">
+                <div class="form-row">
+                    <div class="form=group col-md-3">
+                        <label for="title">Title</label>
+                        <input type="text" name="title" class="form form-control" maxlength="40"  required>    
+                    </div>
+                    <div class="form-group col-md-9">
+                        <label for="description">Description</label>
+                        <input type="text" name="description" class="form form-control" maxlength="40" required>    
+                    </div> 
+                </div>
+                <div class="center" style="padding-bottom: 10px;">
+                    <input type="submit" value="Enter" class="btn btn-primary">
+                    <p class="error error--hidden"></p>
+                </div>
+            </form>
+            </div>
+        </div>
+
+    </div>
+</div>
+
     <div class="row">
-        <div class="col-md-9">
-            <h2>More content will be added here later.</h1>
+        <div class="col-md-10 offset-md-1 text-center">
+            <h2>Cards Created.</h1>
+            {% for card in cardsLists %}
+                <h5><u>Title:</u> {{ card.title }}  <u>Description:</u> {{card.description}}</h5>
+            {% endfor %}
+
         </div>
         
     </div>
