Added dasboard button in editCardsList.html.

--- a/templates/editCardsList.html
+++ b/templates/editCardsList.html
@@ -14,6 +14,11 @@
             <u>A:</u> {{x.answer}}
             <a class="btn btn-primary" href="/user/deleteCard/{{cards.title}}/{{ loop.index-1 }}">Delete</a>
         {% endfor %}
+        <div>
+            <a class="btn btn-primary" href="/dashboard/">Return to Dashboard</a>
+        </div>
+        
+
     </div>
     <div class="jumbotron text-center">
         <h3>Add cards to Cards List</h3>
