--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -45,8 +45,9 @@
                 <h5>
                     <u>Title:</u> {{ cards.title }}
                     <u>Description:</u> {{cards.description}}
-                    <a class="btn btn-primary" href="/user/deleteCards/{{cards['title']}}">Delete</a>
+                    <a class="btn btn-primary" href="/viewCards/{{ cards['owner_name'] }}/{{cards['title']}}">View</a>
                     <a class="btn btn-primary" href="/editCardsList/{{cards['title']}}">Edit</a>
+                    <a class="btn btn-primary" href="/user/deleteCards/{{cards['title']}}">Delete</a>
 
                 </h5>
             {% endfor %}
