--- a/templates/viewCards.html
+++ b/templates/viewCards.html
@@ -2,6 +2,10 @@
 {% block content %}
 
 
+{% if cards.cards[0] %}
+<script>
+    var cards = JSON.parse('{{ cards.cards | tojson }}');   
+</script>
 
 <div class="container">
     <div class="jumbotron row text-center">
@@ -13,15 +17,20 @@
             <input id="previousButton" class="btn" type="button" value="Previous" onclick="previousCard();" disabled/>
         </div>
         <div class="col-md-8">
-            
-            <div id="displayCard" style="background-color:white;margin:10px" onclick="cardFlip();">
-                <h4 id="problemLabel">Question</h4>
-                <h5 id="problemText">{{cards.cards[0].question}}</h5>
+            <div id="introCard" style="background-color:white;margin:10px;">
+                <h5>Instructions</h5>
+                <p>Click on the card to flip it.</p>
+                <p>Use the Next and Previous button to change the card.</p>
+                <input id="startButton" class="btn btn-primary" type="button" value="Play" onclick="startCardView(cards);"/>
+            </div>
+            <div id="displayCard" style="background-color:white;margin:10px; display:none" onclick="cardFlip();">
+                <h4 id="problemLabel"></h4>
+                <h5 id="problemText"></h5>
             </div>
 
         </div>
         <div class="col-md-2">
-            <input id="nextButton" class="btn" type="button" value="Next" onclick="nextCard();" />
+            <input id="nextButton" class="btn" type="button" value="Next" onclick="nextCard();" disabled/>
 
         </div>
         
@@ -30,10 +39,13 @@
 
 <script src="/static/js/viewCardsScript.js"></script>
 
-<script>
-    var cards = JSON.parse('{{ cards.cards | tojson }}');   
-    setFlashCards(cards);
-</script>
+{% else %}
+<div class="container">
+    <div class="jumbotron text-center">
+        <p> No items are in the list</p>
+    </div>
+</div>
 
+{% endif %}
 
 {% endblock %}
