Added function and display of current card number when viewing cards in viewCardsScript.js and viewCards.html.

--- a/templates/viewCards.html
+++ b/templates/viewCards.html
@@ -24,6 +24,7 @@
                 <input id="startButton" class="btn btn-primary" type="button" value="Play" onclick="startCardView(cards);"/>
             </div>
             <div id="displayCard" style="background-color:white;margin:10px; display:none" onclick="cardFlip();">
+                <p style="margin:1px"><span id="index"></span>/<span id="total"></span></p>
                 <h4 id="problemLabel"></h4>
                 <h5 id="problemText"></h5>
             </div>
