--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,10 +22,18 @@
                         <label for="title">Title</label>
                         <input type="text" name="title" class="form form-control" maxlength="40"  required>    
                     </div>
-                    <div class="form-group col-md-9">
+                    <div class="form-group col-md-7">
                         <label for="description">Description</label>
                         <input type="text" name="description" class="form form-control" maxlength="40" required>    
                     </div> 
+                    <div class="form-group col-md-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="true" id="public">
+                            <label class="form-check-label" for="public">
+                              Private
+                            </label>
+                          </div>
+                    </div>
                 </div>
                 <div class="center" style="padding-bottom: 10px;">
                     <input type="submit" value="Enter" class="btn btn-primary">
@@ -48,7 +56,11 @@
                     <a class="btn btn-primary" href="/viewCards/{{ cards['owner_name'] }}/{{cards['title']}}">View</a>
                     <a class="btn btn-primary" href="/editCardsList/{{cards['title']}}">Edit</a>
                     <a class="btn btn-primary" href="/user/deleteCards/{{cards['title']}}">Delete</a>
-
+                    {% if cards.public%}
+                        Public
+                    {% else %}
+                        Private
+                    {% endif %}
                 </h5>
             {% endfor %}
 
