--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,9 +28,9 @@
                     </div> 
                     <div class="form-group col-md-2">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="true" id="public">
+                            <input class="form-check-input" type="checkbox" value="true" id="public" name="public">
                             <label class="form-check-label" for="public">
-                              Private
+                              Public
                             </label>
                           </div>
                     </div>
