--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,41 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="text-center"><a class="headerLink test" href="/"> Flash Card Helper</a></h1>
+        <h1 class="text-center"><a class="headerLink test"> Flash Card Helper</a></h1>
     </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin:10px; border-radius:15px">
+        <a class="navbar-brand" href="#">FCH</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            {% if session['logged_in'] %}
+            <li class="nav-item">
+              <a class="nav-link" href="/dashboard/">Dashboard</a>
+            </li>
+            {% endif %}
+            
+          </ul>
+          
+        </div>
+        {% if session['logged_in'] %}
+            Hello {{ session['user']['userName'] }}!
+            <li class="form-inline">
+                <a class="nav-link" href="/user/signout">Sign out</a>
+              </li>
+        {% endif %}
+        <!--
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>-->
+      </nav>
     {% block content %}
         {# Template insert here #}
     {% endblock %}
