--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,13 @@
 
 </head>
 <body>
-    <div class="header">
-        <h1 class="text-center"><a class="headerLink test"> Flash Card Helper</a></h1>
+  <div class="container">
+    <div class="header" >
+        <h1 class="text-center">Flash Card Helper</h1>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin:10px; border-radius:15px">
-        <a class="navbar-brand" href="#">FCH</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 10px; border-radius:15px">
+        <a class="navbar-brand">FCH</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,10 +28,17 @@
             <li class="nav-item">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="/" >About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="/" >Contact</a>
+            </li>
             {% if session['logged_in'] %}
             <li class="nav-item">
               <a class="nav-link" href="/dashboard/">Dashboard</a>
             </li>
+            
             {% endif %}
             
           </ul>
@@ -51,7 +59,7 @@
     {% block content %}
         {# Template insert here #}
     {% endblock %}
-
+  </div>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="/static/js/scripts.js"></script>
 
