--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
                                 <input type="text" name="email" class="field form-control centerShortField" maxlength="32" placeholder="Enter Email" required>
                                 <label for="password">Password</label>
                                 <input type="password" name="password" class="field form-control centerShortField"  maxlength="32" placeholder="Enter Password" required>
-                                <input type="submit" value="Log In" class="btn btn-primary" style="margin-top: 10px;">
+                                <input type="submit" value="Log In" class="brownButton btn" style="margin-top: 10px;">
                                 <p class="error error--hidden"></p>
                             </form>
                         </div>
@@ -58,7 +58,7 @@
                                 <label for="password2">Re-Enter Password</label>
                                 <input type="password" name="password2" class="field form-control centerShortField" maxlength="32" placeholder="Enter Password Here" required>
                                 <div style="padding-top: 10px;">-->
-                                <input type="submit" value="Sign Up" class="btn btn-primary" style="margin-top:10px">
+                                <input type="submit" value="Sign Up" class="brownButton btn" style="margin-top:10px">
                                 <p class="error error--hidden"></p>
                             </form>
                         </div>
