--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,33 +2,32 @@
 
 {% block content %}
 
-    <h2 class="text-center">Logged in</h2>
-    <div class="text-center">
-        <a href="/user/signout" class="btn btn-primary">Sign out</a>
-    </div>
-
+<h2 class="whiteTitleText text-center">Dashboard</h2>
+<hr class="whiteLine" style="height:2px">
+    
     <!-- Section to add a show. -->
-<div class="container">
-    <div class="jumbotron">
+<div class="container text-center">
+    <div class="brownPanel card">
         <div class="text-center">
-            <h2><a data-toggle="collapse" href="#AddCards">Add a Cards List</a></h2>
-            
+            <h4><a data-toggle="collapse" href="#AddCards" style="color:white">&lt; Add Cards List &gt;</a></h4>   
         </div>
         <div id="AddCards" class="collapse">
+            <hr class="whiteLine">
             <div class="container">
             <form name="addCards">
-                <div class="form-row">
+                <div class="form-row" style="color:white">
                     <div class="form=group col-md-3">
                         <label for="title">Title</label>
-                        <input type="text" name="title" class="form form-control" maxlength="40"  required>    
+                        <input type="text" name="title" class="form form-control" maxlength="40"  placeholder="Enter Title Here" required>    
                     </div>
                     <div class="form-group col-md-7">
                         <label for="description">Description</label>
-                        <input type="text" name="description" class="form form-control" maxlength="40" required>    
+                        <input type="text" name="description" class="form form-control" maxlength="40" placeholder="Enter Description Here" required>    
                     </div> 
                     <div class="form-group col-md-2">
+                        <p>View Setting</p>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="true" id="public" name="public">
+                            <input class="form-check-input boxButton1" type="checkbox" value="true" id="public" name="public">
                             <label class="form-check-label" for="public">
                               Public
                             </label>
@@ -36,35 +35,33 @@
                     </div>
                 </div>
                 <div class="center" style="padding-bottom: 10px;">
-                    <input type="submit" value="Enter" class="btn btn-primary">
+                    <input type="submit" value="Enter" class="btn lPinkButton">
                     <p class="error error--hidden"></p>
                 </div>
             </form>
             </div>
         </div>
-
     </div>
 </div>
 
-    <div class="row">
-        <div class="col-md-10 offset-md-1 text-center">
-            <h2>Cards Created.</h1>
-            {% for cards in cardsLists %}
-                <h5>
-                    <u>Title:</u> {{ cards.title }}
-                    <u>Description:</u> {{cards.description}}
-                    <a class="btn btn-primary" href="/viewCards/{{ cards['owner_name'] }}/{{cards['title']}}">View</a>
-                    <a class="btn btn-primary" href="/editCardsList/{{cards['title']}}">Edit</a>
-                    <a class="btn btn-primary" href="/user/deleteCards/{{cards['title']}}">Delete</a>
-                    {% if cards.public%}
-                        Public
-                    {% else %}
-                        Private
-                    {% endif %}
-                </h5>
-            {% endfor %}
-
-        </div>
-        
+<div class="row">
+    <div class="col-md-10 offset-md-1 text-center">
+        <h2>Cards Created.</h1>
+        {% for cards in cardsLists %}
+            <h5>
+                <u>Title:</u> {{ cards.title }}
+                <u>Description:</u> {{cards.description}}
+                <a class="btn btn-primary" href="/viewCards/{{ cards['owner_name'] }}/{{cards['title']}}">View</a>
+                <a class="btn btn-primary" href="/editCardsList/{{cards['title']}}">Edit</a>
+                <a class="btn btn-primary" href="/user/deleteCards/{{cards['title']}}">Delete</a>
+                {% if cards.public%}
+                    Public
+                {% else %}
+                    Private
+                {% endif %}
+            </h5>
+        {% endfor %}
     </div>
+</div>
+
 {% endblock %}
