--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,67 +1,74 @@
 {% extends "base.html" %}
-
 {% block content %}
 
-<h2 class="whiteTitleText text-center">Dashboard</h2>
+<h1 class="whiteTitleText text-center">Dashboard</h1>
 <hr class="whiteLine" style="height:2px">
-    
-    <!-- Section to add a show. -->
+
+<!-- Section to add a show. -->
 <div class="container text-center">
     <div class="brownPanel card">
         <div class="text-center">
-            <h4><a data-toggle="collapse" href="#AddCards" style="color:white">&lt; Add Cards List &gt;</a></h4>   
+            <h4><a data-toggle="collapse" href="#AddCards" style="color:white">&lt; Add Flash Cards Set &gt;</a></h4>
         </div>
         <div id="AddCards" class="collapse">
             <hr class="whiteLine">
             <div class="container">
-            <form name="addCards">
-                <div class="form-row" style="color:white">
-                    <div class="form=group col-md-3">
-                        <label for="title">Title</label>
-                        <input type="text" name="title" class="form form-control" maxlength="40"  placeholder="Enter Title Here" required>    
+                <form name="addCards">
+                    <div class="form-row" style="color:white">
+                        <div class="form=group col-md-3">
+                            <label for="title">Title</label>
+                            <input type="text" name="title" class="form form-control" maxlength="40"
+                                placeholder="Enter Title Here" required>
+                        </div>
+                        <div class="form-group col-md-7">
+                            <label for="description">Description</label>
+                            <input type="text" name="description" class="form form-control" maxlength="100"
+                                placeholder="Enter Description Here" required>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <p>View Setting</p>
+                            <div class="form-check">
+                                <input class="form-check-input boxButton1" type="checkbox" value="true" id="public"
+                                    name="public">
+                                <label class="form-check-label" for="public">
+                                    Public
+                                </label>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group col-md-7">
-                        <label for="description">Description</label>
-                        <input type="text" name="description" class="form form-control" maxlength="40" placeholder="Enter Description Here" required>    
-                    </div> 
-                    <div class="form-group col-md-2">
-                        <p>View Setting</p>
-                        <div class="form-check">
-                            <input class="form-check-input boxButton1" type="checkbox" value="true" id="public" name="public">
-                            <label class="form-check-label" for="public">
-                              Public
-                            </label>
-                          </div>
+                    <div class="center">
+                        <input type="submit" value="Enter" class="btn lPinkButton">
+                        <p class="error error--hidden"></p>
                     </div>
-                </div>
-                <div class="center" style="padding-bottom: 10px;">
-                    <input type="submit" value="Enter" class="btn lPinkButton">
-                    <p class="error error--hidden"></p>
-                </div>
-            </form>
+                </form>
             </div>
         </div>
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-10 offset-md-1 text-center">
-        <h2>Cards Created.</h1>
+<div class="whiteBorder">
+    <h3 class="text-center">Your Flash Cards</h3>
+    <div class="row">
         {% for cards in cardsLists %}
-            <h5>
-                <u>Title:</u> {{ cards.title }}
-                <u>Description:</u> {{cards.description}}
-                <a class="btn btn-primary" href="/viewCards/{{ cards['owner_name'] }}/{{cards['title']}}">View</a>
-                <a class="btn btn-primary" href="/editCardsList/{{cards['title']}}">Edit</a>
-                <a class="btn btn-primary" href="/user/deleteCards/{{cards['title']}}">Delete</a>
-                {% if cards.public%}
-                    Public
-                {% else %}
-                    Private
-                {% endif %}
-            </h5>
+        <div class="col-md-3">
+            <div class="whitePanel text-center">
+                <h5>
+                    {{ cards.title }}
+                    <span style="font-size: 15px;">
+                        ({% if cards.public%}Public{% else %}Private{% endif %})
+                    </span>
+                </h5>
+                <hr class="brownLine" style="margin:1px">
+                <p style="margin:1px; font-style: italic;">-Description-</p>
+                <p style="line-height:90%">{{cards.description}}</p>
+                <div>
+                    <a class="btn brownButton" href="/viewCards/{{ cards['owner_name'] }}/{{cards['title']}}">View</a>
+                    <a class="btn brownButton" href="/editCardsList/{{cards['title']}}">Edit</a>
+                    <a class="btn brownButton" href="/user/deleteCards/{{cards['title']}}">-</a>
+                </div>
+            </div>
+        </div>
         {% endfor %}
     </div>
 </div>
-
 {% endblock %}
