--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,18 @@ body{
     padding:10px;
     margin-top: 5px;
 }
+.pinkPanel{
+    background-color:rgb(252, 155, 143);
+    color: white;
+    border-radius: 10px;
+    padding:5px;
+    
+    margin-bottom: 10px;
+}
+.pinkPanel:hover{
+    background-color: rgb(232, 126, 126);
+    text-decoration: none;
+}
 
 
 /* hr line styling. */
